Rework test run configs to be embedded
